--- a/src/bb_brain/CMakeLists.txt
+++ b/src/bb_brain/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(bbBrain)
+project(bb_brain)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -81,7 +81,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES bbBrain
+#  LIBRARIES bb_brain
 #  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
@@ -98,19 +98,19 @@ include_directories(
 )
 
 ## Declare a cpp library
-# add_library(bbBrain
-#   src/${PROJECT_NAME}/bbBrain.cpp
+# add_library(bb_brain
+#   src/${PROJECT_NAME}/bb_brain.cpp
 # )
 
 ## Declare a cpp executable
-# add_executable(bbBrain_node src/bbBrain_node.cpp)
+# add_executable(bb_brain_node src/bb_brain_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(bbBrain_node bbBrain_generate_messages_cpp)
+# add_dependencies(bb_brain_node bb_brain_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(bbBrain_node
+# target_link_libraries(bb_brain_node
 #   ${catkin_LIBRARIES}
 # )
 
@@ -129,7 +129,7 @@ include_directories(
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS bbBrain bbBrain_node
+# install(TARGETS bb_brain bb_brain_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -154,7 +154,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_bbBrain.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_bb_brain.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
