--- a/src/bb_brain/params/movement.yaml
+++ b/src/bb_brain/params/movement.yaml
@@ -2,7 +2,7 @@ acc_lim_x: 2.0
 acc_lim_y: 2.0
 acc_lim_theta: 2.0
 max_vel_x: 0.2
-min_vel_x
+min_vel_x: 0.1
 max_vel_theta: 1.0
 min_vel_theta: -1.0
 min_in_place_vel_theta: 0.3
